--- a/index.css
+++ b/index.css
@@ -106,9 +106,9 @@ body {
 .section-about {
   background-color: #f4f4f4;
   padding: 9em 0;
+  margin-bottom: 8rem;
 }
-
-.section__heading-secondary {
+.section-about .section__heading-secondary {
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
@@ -118,38 +118,57 @@ body {
   color: transparent;
   letter-spacing: 2px;
 }
-.section__heading-secondary:hover {
+.section-about .section__heading-secondary:hover {
   transform: skewY(2deg) skewX(15deg) scale(1.1);
   text-shadow: 0.5rem 1rem 2rem;
 }
-
-.teartiary-heading {
+.section-about .teartiary-heading {
   font-size: 1.6rem;
   font-weight: 700;
   text-transform: uppercase;
 }
-
-.paragraph {
+.section-about .paragraph {
   font-size: 1.6rem;
 }
-.paragraph:not(:last-child) {
+.section-about .paragraph:not(:last-child) {
   margin-bottom: 3rem;
 }
-
-.section-features {
-  padding: 36rem 4rem;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-image: linear-gradient(to left bottom, rgba(255, 252, 252, 0.3), rgba(242, 67, 45, 0.3)), url("aj1-lost-found-3.jpg");
-  clip-path: polygon(0 11%, 100% 0px, 100% 86%, 0px 100%);
-}
-
-.section-tours {
+.section-about .section-tours {
   padding: 2rem 6rem;
   background-color: #f4f4f4;
 }
 
+@media only screen and (max-width: 600px) {
+  .row {
+    flex-direction: column;
+  }
+  .col-1-of-2:first-child {
+    display: none;
+  }
+  .col-1-of-2:last-child {
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 2.5rem;
+  }
+  .composition {
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    left: 6rem;
+  }
+  .composition__photo {
+    width: 90vw;
+    max-width: 22rem;
+    left: 5rem;
+    margin-bottom: 1.5rem;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  }
+  .section-about .section__heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem;
+  }
+}
 .btn,
 button.btn,
 input.btn {
@@ -233,13 +252,13 @@ input.btn-red {
 .feature-box {
   background-color: rgba(255, 255, 255, 0.8);
   font-size: 1.5rem;
-  margin-top: -20vh;
+  margin-top: 0;
   padding: 2.5rem;
   text-align: center;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: all 0.2s;
-  height: 20rem;
+  min-height: 16rem;
 }
 .feature-box__icon {
   font-size: 6rem;
@@ -252,6 +271,71 @@ input.btn-red {
 .feature-box:hover {
   transform: scale(1.05);
   box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+}
+
+.section-features {
+  padding: 36rem 4rem;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: linear-gradient(to left bottom, rgba(255, 252, 252, 0.3), rgba(242, 67, 45, 0.3)), url("aj1-lost-found-3.jpg");
+  clip-path: polygon(0 11%, 100% 0px, 100% 86%, 0px 100%);
+}
+@media only screen and (max-width: 900px) {
+  .section-features {
+    padding: 8rem 1.5rem;
+  }
+  .section-features .row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .section-features .col-1-of-4 {
+    width: 90%;
+    margin-bottom: 2.5rem;
+    margin-right: 0 !important;
+  }
+  .section-features .feature-box {
+    padding: 2.5rem 1.5rem;
+    text-align: center;
+  }
+  .section-features .feature-box__icon {
+    font-size: 4rem;
+  }
+  .section-features .tertiary-heading {
+    font-size: 2rem;
+  }
+  .section-features .feature-box__text {
+    font-size: 1.4rem;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .section-features {
+    padding: 10rem 5.5rem;
+  }
+  .section-features .row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .section-features .col-1-of-4 {
+    width: 100%;
+    margin-bottom: 2rem;
+    margin-right: 0 !important;
+  }
+  .section-features .feature-box {
+    padding: 2rem 0.5rem;
+    margin-top: 0;
+    min-height: 12rem;
+    text-align: center;
+  }
+  .section-features .feature-box__icon {
+    font-size: 3rem;
+  }
+  .section-features .tertiary-heading {
+    font-size: 1.5rem;
+  }
+  .section-features .feature-box__text {
+    font-size: 1.2rem;
+  }
 }
 
 .card {
@@ -403,7 +487,7 @@ input.btn-red {
 .card__details ul li:last-child {
   border-bottom: none;
 }
-.card:hover .card__inner {
+.card:hover > .card__inner {
   transform: rotateY(180deg);
 }
 .card__picture {
@@ -426,11 +510,103 @@ input.btn-red {
   background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1)), url("891821a5_34ca_4a46_9d72_fbdecf137336.webp");
 }
 
+@media only screen and (max-width: 900px) {
+  .section-tours .row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .section-tours .col-1-of-3 {
+    width: 90%;
+    margin-bottom: 2.5rem;
+    margin-right: 0 !important;
+  }
+  .card {
+    height: 38rem;
+    min-width: 260px;
+    max-width: 400px;
+    margin: 0 auto 2rem auto;
+  }
+  .card__picture {
+    height: 16rem;
+  }
+  .card__heading {
+    font-size: 1.5rem;
+    top: 8rem;
+    right: 1rem;
+    width: 80%;
+  }
+  .card__details ul li {
+    font-size: 1.2rem;
+    padding: 0.7rem;
+  }
+  .btn--white {
+    font-size: 1.2rem;
+    padding: 0.8rem 2rem;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .section-tours {
+    padding: 2rem 0.5rem;
+  }
+  .section-tours .row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .section-tours .col-1-of-3 {
+    width: 100%;
+    margin-bottom: 1.5rem;
+    margin-right: 0 !important;
+  }
+  .card {
+    height: 32rem;
+    min-width: 200px;
+    max-width: 100%;
+    margin: 0 auto 1.2rem auto;
+  }
+  .card__picture {
+    height: 12rem;
+  }
+  .card__heading {
+    font-size: 1.1rem;
+    top: 5.5rem;
+    right: 0.5rem;
+    width: 90%;
+  }
+  .card__details ul li {
+    font-size: 1rem;
+    padding: 0.5rem;
+  }
+  .btn--white {
+    font-size: 1rem;
+    padding: 0.6rem 1.2rem;
+  }
+}
 .section-testimonials {
   position: relative;
   padding: 8rem 0;
   overflow: hidden;
   z-index: 1;
+}
+.section-testimonials .btn {
+  position: relative;
+  z-index: 3;
+  display: block;
+  margin: 2rem auto 0 auto;
+  font-size: 1.1rem;
+  padding: 1rem 2.2rem;
+  width: fit-content;
+  min-width: 60vw;
+  text-align: center;
+}
+@media (max-width: 700px) {
+  .section-testimonials {
+    padding: 4rem 0.5rem;
+  }
+  .section-testimonials .btn {
+    font-size: 1.1rem;
+    padding: 1rem 2.2rem;
+    min-width: 60vw;
+  }
 }
 
 .video-bg {
@@ -479,9 +655,12 @@ input.btn-red {
 @media (max-width: 700px) {
   .testimonial-box {
     flex-direction: column;
-    padding: 2rem 1rem;
+    padding: 2rem 0rem 2.5rem 0rem;
     border-radius: 2rem;
     clip-path: none;
+    width: 90%;
+    max-width: 100%;
+    margin: 0 auto 2rem auto;
   }
 }
 
@@ -536,6 +715,12 @@ input.btn-red {
 .testimonial-content {
   flex: 1;
 }
+@media (max-width: 700px) {
+  .testimonial-content {
+    width: 100%;
+    text-align: center;
+  }
+}
 
 .testimonial-title {
   font-size: 1.7rem;
@@ -543,11 +728,32 @@ input.btn-red {
   margin-bottom: 1rem;
   color: #333;
 }
+@media (max-width: 700px) {
+  .testimonial-title {
+    font-size: 1.3rem;
+  }
+}
 
 .testimonial-content p {
   font-size: 1.4rem;
   color: #444;
   line-height: 1.6;
+}
+@media (max-width: 700px) {
+  .testimonial-content p {
+    font-size: 1.1rem;
+  }
+}
+@media (max-width: 700px) {
+  .testimonial-content p .section-testimonials .btn {
+    display: block;
+    margin: 2rem auto 0 auto;
+    font-size: 1.1rem;
+    padding: 1rem 2.2rem;
+    width: fit-content;
+    min-width: 60vw;
+    text-align: center;
+  }
 }
 
 .section-book {
@@ -718,6 +924,63 @@ input.btn-red {
   opacity: 0;
   visibility: hidden;
   transform: translateY(-4rem);
+}
+
+@media only screen and (max-width: 900px) {
+  .section-book .row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .section-book .book {
+    width: 95%;
+    margin: 0 auto;
+  }
+  .section-book .book__form {
+    padding: 6rem 5rem;
+  }
+  .section-book .form {
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .section-book {
+    padding: 2rem 1.5rem;
+  }
+  .section-book .row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .section-book .book {
+    width: 100%;
+    margin: 0 auto;
+  }
+  .section-book .book__form {
+    padding: 6rem 5rem;
+  }
+  .section-book .form {
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .form__group {
+    width: 100%;
+    margin-bottom: 1.2rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .form__input,
+  .form__textarea {
+    width: 100%;
+    font-size: 1.1rem;
+    padding: 0.8rem 1rem;
+    border-radius: 0.7rem;
+    box-sizing: border-box;
+  }
 }
 
 .navigation {
@@ -897,16 +1160,6 @@ header .header-content .heading-primary {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-@media (max-width: 900px) {
-  header .header-content .heading-primary {
-    font-size: 3.2rem;
-  }
-}
-@media (max-width: 600px) {
-  header .header-content .heading-primary {
-    font-size: 2.1rem;
-  }
-}
 header .header-content .heading-primary span {
   color: black;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -920,6 +1173,27 @@ header .header-content .heading-secondary {
   animation: moveInRight;
   animation-duration: 0.5s;
   animation-timing-function: ease-in;
+}
+
+@media (max-width: 900px) {
+  .heading-primary {
+    font-size: 3.2rem;
+    animation-name: moveInLeft;
+  }
+}
+@media (max-width: 600px) {
+  .header .header-content .heading-primary {
+    font-size: 2rem;
+    left: 46rem;
+    margin-bottom: 40rem;
+    margin: 0px 0 2rem 24rem;
+  }
+  .header-content {
+    top: 78% !important;
+  }
+  .header-content a {
+    margin: 1rem 0 0 24rem;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
