--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,7 @@
+
 @use '../abstract/variables';
 @use '../base/animations';
-
+ 
 .row{
     margin:0 auto;
     display: flex;
@@ -37,9 +38,12 @@
 
 
 .section-about{
+ 
     background-color: variables.$color-grey;
     padding: 9em 0;
-}
+    margin-bottom: 8rem;
+
+
 
 .section__heading-secondary{
   font-size: 3.5rem;
@@ -73,22 +77,49 @@
 }
 
 
-.section-features {
-    padding:36rem 4rem;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-image:
-        linear-gradient(to left bottom, rgba(255, 252, 252, 0.3), rgba(242, 67, 45, 0.3)), url("aj1-lost-found-3.jpg");
-    clip-path: polygon(0 11%, 100% 0px, 100% 86%, 0px 100%);
-}
-
-
 .section-tours {
    padding: 2rem 6rem;
   background-color: #f4f4f4;
 }
 
- 
+
+}
+
+  // Responsive: On mobile, show only the image column
+  @media only screen and (max-width: 600px) {
+    .row {
+      flex-direction: column;
+    }
+    .col-1-of-2:first-child {
+      display: none;
+    }
+    .col-1-of-2:last-child {
+      width: 100%;
+      margin: 0 auto;
+       margin-bottom: 2.5rem;
+    }
+    .composition {
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+       position: relative;
+        left: 6rem;
+    }
+    
+    .composition__photo {
+      width: 90vw;
+      max-width: 22rem;
+      left:5rem;
+      margin-bottom: 1.5rem;
+      box-shadow: 0 1.5rem 4rem rgba(0,0,0,0.15);
+    }
+
+    .section-about .section__heading-secondary{ 
+            &:hover{
+            transform: skewY(2deg) skewX(15deg) scale(1.1);
+            text-shadow: .5rem 1rem 2rem;
+        }
+    }
+  }
 
 
